--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@navikt/aksel-icons": "^7.33.2",
     "@navikt/ds-css": "^7.33.2",
     "@navikt/ds-react": "^7.33.2",
+    "@navikt/nav-dekoratoren-moduler": "^3.5.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
